week9/thursday/k8s/kk-payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kk-payments
  namespace: default
  labels:
    app: kk-payments
spec:
  type: ClusterIP
  selector:
    app: kk-payments
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
